--- a/app/src/main/res/layout/view_home.xml
+++ b/app/src/main/res/layout/view_home.xml
@@ -8,6 +8,7 @@
     tools:context="com.example.stevenzafrani.congregate.HomeActivity">
 
     <TextView
+        android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name_youtube" />
