--- a/app/src/main/res/layout/view_home.xml
+++ b/app/src/main/res/layout/view_home.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/view_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_standard_margin"
-    tools:context="com.example.stevenzafrani.congregate.HomeActivity">
+    android:orientation="vertical"
+    tools:context="com.example.stevenzafrani.congregate.activities.HomeActivity">
 
     <TextView
+        android:id="@+id/feed_title"
         android:layout_alignParentStart="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name_youtube" />
+        android:text="@string/app_name_youtube"/>
 
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_main_feed"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+
+</LinearLayout>
