--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,10 +8,12 @@
         android:id="@+id/feed_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/app_name_youtube"/>
+        android:text="@string/media_name_youtube"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_main_feed"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerView_youtube"
+        />
+
 </LinearLayout>
