--- a/app/src/main/res/layout/recycler_youtube.xml
+++ b/app/src/main/res/layout/recycler_youtube.xml
@@ -2,24 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAlignment="center"
+        android:text="This is default text"
+        android:textSize="13dp"
         android:id="@+id/recyclerview_youtube_title"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="This is default description"
+        android:textSize="11dp"
         android:id="@+id/recyclerview_youtube_description"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="11dp"
         android:id="@+id/recyclerview_youtube_link"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="11dp"
         android:id="@+id/recyclerview_youtube_id"/>
 
     <FrameLayout
