formatted recyclerview for readability

--- a/app/src/main/res/layout/recycler_youtube.xml
+++ b/app/src/main/res/layout/recycler_youtube.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/activity_standard_margin">
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,17 +16,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="This is default description"
-        android:textSize="11dp"
+        android:textSize="9dp"
         android:id="@+id/recyclerview_youtube_description"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
         android:textSize="11dp"
+        android:textStyle="bold"
         android:id="@+id/recyclerview_youtube_link"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="11dp"
+        android:textStyle="bold"
         android:id="@+id/recyclerview_youtube_id"/>
 
     <FrameLayout
