--- a/app/src/main/res/layout/recycler_youtube.xml
+++ b/app/src/main/res/layout/recycler_youtube.xml
@@ -32,6 +32,11 @@
         android:textStyle="bold"
         android:id="@+id/recyclerview_youtube_id"/>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerView_thumbnail_img"
+        android:layout_gravity="center_horizontal"/>
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
