--- a/app/src/main/res/layout/view_home.xml
+++ b/app/src/main/res/layout/view_home.xml
@@ -1,29 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_standard_margin"
     android:orientation="vertical"
     tools:context="com.example.stevenzafrani.congregate.activities.HomeActivity">
-
-    <Button
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Home"
-        android:id="@+id/button_select_home"
+        android:id="@+id/tab_home"
+        app:tabMode="scrollable"
+        >
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button_select_home"
+            android:padding="5dp"
+            android:text="View Home"
+            android:textSize="9dp"
         />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="View Youtube Feed"
-        android:id="@+id/button_select_youtube"/>
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="View Youtube Feed"
+            android:textSize="9dp"
+            android:id="@+id/button_select_youtube"
+        />
+        <android.support.design.widget.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="View Algorithms"
+            android:textSize="9dp"
+            android:id="@+id/button_select_algorithm"
+        />
+    </android.support.design.widget.TabLayout>
 
-    <Button
-        android:layout_width="wrap_content"
+    <android.support.v4.view.ViewPager
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="View Algorithms"
-        android:id="@+id/button_select_algorithm"/>
+        android:id="@+id/viewpager_home"/>
+
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
