--- a/app/src/main/res/layout/fragment_youtube.xml
+++ b/app/src/main/res/layout/fragment_youtube.xml
@@ -3,7 +3,13 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:id="@+id/imageView_settings"
+        android:clickable="true"
+        android:src="@drawable/ic_settings_black_24dp"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
