--- a/app/src/main/res/xml/preferences_youtube.xml
+++ b/app/src/main/res/xml/preferences_youtube.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
-        android:dependency="pref_sync"
-        android:key="pref_syncConnectionType"
-        android:title="Youtube Preferences"
-        android:dialogTitle="Youtube DialogTitle"
+        android:title="Search By Category"
+        android:summary="This is where we determine what kind of youtube videos we will search for."
+        android:key="sortBy"
+        android:entries="@array/youtubeSortByArray"
+        android:entryValues="@array/youtubeSortByValues"
+        android:defaultValue="1"
         />
-        <!--
-        android:entries="@array/pref_syncConnectionTypes_entries"
-        android:entryValues="@array/pref_syncConnectionTypes_values"
-        android:defaultValue="@string/pref_syncConnectionTypes_default" />
-        -->
 
 </PreferenceScreen>
