--- a/app/src/main/res/layout/fragment_algorithm.xml
+++ b/app/src/main/res/layout/fragment_algorithm.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
         android:id="@+id/container_units"/>
 
 </LinearLayout>
