--- a/app/src/main/res/layout/fragment_algorithm.xml
+++ b/app/src/main/res/layout/fragment_algorithm.xml
@@ -5,11 +5,21 @@
     android:layout_height="match_parent">
 
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:layout_gravity="left"
+        android:id="@+id/spinner_algorithm_sort"
+        >
+
+    </Spinner>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/container_units"/>
+        android:id="@+id/container_units"
+        />
 
 </LinearLayout>
