--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="youtubeCategoryArray">
-        <item>Most Popular</item>
-        <item>Top Rated</item>
-        <item>Recent</item>
+        <item>Horror</item>
+        <item>Music</item>
+        <item>Comedy</item>
     </string-array>
     <string-array name="youtubeCategoryValues">
         <item>1</item>
