--- a/app/src/main/res/layout/fragment_algorithm.xml
+++ b/app/src/main/res/layout/fragment_algorithm.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Testing"/>
 
     <Spinner
         android:layout_width="wrap_content"
@@ -15,6 +18,10 @@
 
     </Spinner>
 
-    
+    <ImageView
+        android:id="@+id/imageView_algorithm"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        />
 
 </LinearLayout>
