--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/menu_drawer_open"
+        android:icon="@drawable/ic_menu_black_24dp"
+        android:title="@string/menu_drawer_title"
+        />
 </menu>
