--- a/app/src/main/res/layout/view_algorithm.xml
+++ b/app/src/main/res/layout/view_algorithm.xml
@@ -1,59 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_standard_margin"
+    android:background="#ffffff">
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical"
     tools:context="com.example.stevenzafrani.congregate.activities.HomeActivity">
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/tab_algorithm"
-        app:tabMode="scrollable"
-        >
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/activity_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/button_select_algorithm"
-            android:padding="5dp"
-            android:text="View Home"
-            android:textSize="9dp"
-            />
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
+            android:id="@+id/tab_algorithm"
+            app:tabMode="scrollable"
+            >
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/button_select_algorithm"
+                android:padding="5dp"
+                android:text="View Home"
+                android:textSize="9dp"
+                />
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="View Youtube Feed"
+                android:textSize="9dp"
+                android:id="@+id/button_select_sort"
+                />
+            <android.support.design.widget.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="View Algorithms"
+                android:textSize="9dp"
+                android:id="@+id/button_select_search"
+                />
+        </android.support.design.widget.TabLayout>
+
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="View Youtube Feed"
-            android:textSize="9dp"
-            android:id="@+id/button_select_sort"
+            android:id="@+id/viewpager_algorithm"/>
+
+
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/activity_standard_margin"
+            android:orientation="vertical"
+            tools:context="com.example.stevenzafrani.congregate.activities.HomeActivity"
             />
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="View Algorithms"
-            android:textSize="9dp"
-            android:id="@+id/button_select_search"
-            />
-    </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/viewpager_algorithm"/>
+    </LinearLayout>
 
-
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/container"
-        android:layout_width="match_parent"
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:padding="@dimen/activity_standard_margin"
-        android:orientation="vertical"
-        tools:context="com.example.stevenzafrani.congregate.activities.HomeActivity"
-        />
-
-</LinearLayout>
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#ffffff"/>
+</android.support.v4.widget.DrawerLayout>
