--- a/app/src/main/res/layout/fragment_algorithm.xml
+++ b/app/src/main/res/layout/fragment_algorithm.xml
@@ -5,20 +5,10 @@
     android:layout_height="match_parent"
     android:padding="@dimen/activity_standard_margin">
 
-    <Spinner
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:layout_gravity="left"
-        android:id="@+id/spinner_algorithm_sort"
-        >
-
-    </Spinner>
-
-    <ImageView
-        android:id="@+id/imageView_algorithm"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        />
+        android:text="Sorting is the process by which an array of values are reorganized into ascending or descending order."
+        android:layout_gravity="start"/>
 
 </LinearLayout>
