--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,14 +9,17 @@
         android:id="@+id/feed_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:elevation="5dp"
+        android:layout_gravity="center_horizontal"
+        android:padding="4dp"
         android:text="@string/home_fragment_created_by"
-        android:textSize="9dp"/>
+        android:textSize="11dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:padding="4dp"
         android:text="@string/home_fragment_intro"
         />
 
@@ -24,12 +27,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
+        android:padding="4dp"
         android:text="@string/home_fragment_section_1"
         />
     <ListView
         android:id="@+id/listView_home_fragment"
+        android:padding="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:footerDividersEnabled="false"
+        android:clipToPadding="true"
+        android:overScrollFooter="@android:color/transparent"
+        />
 
 
 </LinearLayout>
