--- a/app/src/main/res/layout/listview_home_fragment.xml
+++ b/app/src/main/res/layout/listview_home_fragment.xml
@@ -4,4 +4,6 @@
     android:id="@+id/listview_home_fragment_textview"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_gravity="start"/>
+    android:layout_gravity="start"
+    android:padding="8dp"
+    android:textSize="12dp"/>
