--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Algorithm Button Theme. -->
+    <style name="Algorithm" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/accentRed</item>
+        <item name="android:textColor">@color/primaryWhite</item>
+    </style>
+
 </resources>
