--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -48,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageView
-            android:id="@+id/imageView_algorithm"
+            android:id="@+id/imageView_algorithm_search"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
     </LinearLayout>
