--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,6 +19,7 @@
             android:layout_gravity="start"/>
 
         <Button
+            android:id="@+id/button_run_algorithm_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="8dp"
