--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,32 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_standard_margin">
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Spinner
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:padding="0dp"
-            android:id="@+id/spinner_algorithm_search"
-            android:layout_gravity="start"/>
+        android:padding="0dp"
+        android:layout_margin="0dp"
+        android:text="Choose search algorithm"
+        android:textColor="@color/tertiaryGray"
+        android:textSize=""
+        />
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:padding="0dp"
+        android:id="@+id/spinner_algorithm_search"
+        android:layout_gravity="start"/>
 
-        <Button
-            android:id="@+id/button_run_algorithm_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:layout_gravity="right"
-            android:layout_margin="0dp"
-            android:minHeight="0dp"
-            android:minWidth="0dp"
-            android:theme="@style/Algorithm"
-            android:text="Run"/>
+    <Button
+        android:id="@+id/button_run_algorithm_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_gravity="right"
+        android:layout_margin="0dp"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:theme="@style/Algorithm"
+        android:text="Run"/>
 
-    </LinearLayout>
     <android.support.design.widget.TextInputLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
