--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -10,34 +10,29 @@
         android:layout_height="wrap_content"
         android:padding="0dp"
         android:layout_margin="0dp"
+        android:layout_marginLeft="10dp"
+        android:layout_gravity="left"
         android:text="Choose search algorithm"
         android:textColor="@color/tertiaryGray"
-        android:textSize=""
+        android:textSize="@dimen/ts_9"
         />
     <Spinner
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="left"
         android:padding="0dp"
         android:id="@+id/spinner_algorithm_search"
         android:layout_gravity="start"/>
 
-    <Button
-        android:id="@+id/button_run_algorithm_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_gravity="right"
-        android:layout_margin="0dp"
-        android:minHeight="0dp"
-        android:minWidth="0dp"
-        android:theme="@style/Algorithm"
-        android:text="Run"/>
+
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:textAlignment="textStart"
+        android:layout_marginLeft="10dp"
         >
         <android.support.design.widget.TextInputEditText
             android:layout_width="100dp"
@@ -47,6 +42,21 @@
             android:textSize="9dp"
             />
     </android.support.design.widget.TextInputLayout>
+
+    <Button
+        android:id="@+id/button_run_algorithm_search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:padding="8dp"
+        android:layout_gravity="left"
+        android:minHeight="0dp"
+        android:minWidth="0dp"
+        android:theme="@style/Algorithm"
+        android:text="Run"/>
+
     <ImageView
             android:id="@+id/imageView_algorithm_search"
             android:layout_width="fill_parent"
