--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,9 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="0dp"
-        android:layout_margin="0dp"
         android:layout_marginLeft="10dp"
-        android:layout_gravity="left"
         android:text="Choose search algorithm"
         android:textColor="@color/tertiaryGray"
         android:textSize="@dimen/ts_9"
@@ -38,8 +36,8 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
-            android:hint="Searching for..."
-            android:textSize="9dp"
+            android:hint="Search for value"
+            android:textSize="@dimen/ts_9"
             />
     </android.support.design.widget.TextInputLayout>
 
