--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -36,6 +36,9 @@
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:maxLines="1"
+            android:id="@+id/edit_text_search_value"
+            android:inputType="number"
+            android:digits="0123456789"
             android:hint="Search for value"
             android:textSize="@dimen/ts_9"
             />
